--- a/src/styles/components/leagueStats/_matches.scss
+++ b/src/styles/components/leagueStats/_matches.scss
@@ -8,6 +8,18 @@
     margin-bottom: 10px;
     background-color: #7fa9d1;
     color: black;
+
+    & div {
+        margin-left: 5px;
+        margin-right: 5px;
+    }
+}
+
+.match-result__items-bought {
+    display: flex;
+    flex-grow: 2;
+    justify-content: space-between;
+    flex-wrap: wrap;
 }
 
 @media (max-width: 425px) {
